--- a/index.html
+++ b/index.html
@@ -125,8 +125,7 @@
 	  </div>
 	  <div class=fourth-event><div style="background-image: url('./style/images/events/development.png')"></div><h2>Development</h2><p>We're still in the alpha stages. We're still ironing out the bugs and scripting, to provide you with 24/7 entertainment consisting of shows, new tracks, and live music. It's a long process, so bear with us here.</p></div>
 	  <div class=fourth-event><div style="background-image: url('./style/images/events/hosttrial.png')"></div><h2>Host Trial</h2><p>See yourself as an aspiring radio host? Give yourself a shot at Silhouette! We're currently accepting host trials and experimental shows, so this might be your chance to get yourself on air. Have your voice heard. Here, at Silhouette. <a onClick="window.open('http://www.silhouette.gq/jobs','_blank')">Learn More</a></p></div>
-	  <div id=deadbeats class=fifth-anchor></div>
-	  <div class=fourth-event><div style="background-image: url('./style/images/deadbeats/Vaporwave.jpg')"></div><h2>Deadbeats W/ the Ghost DJ</h2><p>The Ghost DJ's picks for Deadbeats: Vaporwave. Listen in from 23:00 to 3:00 every night.</p></div>
+	  <div class=fourth-event><div style="background-image: url('./style/images/deadbeats/Electro Swing.jpg')"></div><h2>Deadbeats W/ the Ghost DJ</h2><p>The Ghost DJ's picks for Deadbeats: Vaporwave. Listen in from 23:00 to 3:00 every night.</p></div>
 	</div>
 	<div id=third-calendarcontainer>
 	  <div id=third-cover></div>
@@ -339,9 +338,19 @@
 	<div id=fifth>
 	  <h1 id=shows-title>Music</h1>
 	  <div id=shows style="position:relative;top:-300px"></div>
+	  <div class=fifth-show style="background-image: url('./style/images/music/Top Picks.jpg')"><div class=fifth-anchor id=toppicks></div></div>
 	  <div class=fifth-show style="background-image: url('./style/images/music/Highway.jpg')"><div class=fifth-anchor id=highway></div></div>
 	  <div class=fifth-show style="background-image: url('./style/images/music/Woke.jpg')"><div class=fifth-anchor id=woke></div></div>
 	  <div class=fifth-show style="background-image: url('./style/images/music/Evening Chill.jpg')"><div class=fifth-anchor id=eveningchill></div></div>
+	</div>
+	<div id=sixth>
+	  <div id=deadbeats class=fifth-anchor></div>
+	  <h1>Deadbeats</h1>
+	  <div id=sixth-container>
+	    <div id=sixth-top style="background-image:url('./style/images/deadbeats/Vaporwave.jpg')"></div>
+		<div class=sixth-top-size><div class=sixth-top-back style="background-image:url('./style/images/deadbeats/Electro Swing.jpg');z-index: -1"></div></div>
+		<div class=sixth-top-size><div class=sixth-top-back style="background-image:url('./style/images/deadbeats/Tripsketch.jpg');z-index: -2"></div></div>
+	  </div>
 	</div>
 	<br>
 	<br>
