--- a/mobile/index.html
+++ b/mobile/index.html
@@ -32,7 +32,7 @@
 	
   </head>
   <body>
-    <audio id=stream src="http://listen.openstream.co/3813/audio" autostart="0"></audio>
+    <audio id=stream src="https://str2b.openstream.co/1035?aw_0_1st.stationid=3849&aw_0_1st.publisherId=1059&aw_0_1st.serverId=str2b" autostart="0"></audio>
 	<iframe id=navbar-desktoplike src="https://php-additions.silhouette.repl.co/php/likes.php" style="overflow:hidden" scroll="no"></iframe>
 	<div id=top-titlecontainer>
 	  <h1 id=top-title id=yeete>Silhouette</h1>
