--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <body>
   <div id=load><div id="load-record"><div id="load-1"></div><div class="load-rotate" id="load-2"></div><div class="load-rotate" id="load-3"></div><div class="load-rotate" id="load-4"></div></div></div>
   <div style="scroll-behavior:smooth">
-    <audio id=stream src="https://str2b.openstream.co/1035?aw_0_1st.stationid=3849&aw_0_1st.publisherId=1059&aw_0_1st.serverId=str2b"></audio>
+    <audio id=stream src="https://str2b.openstream.co/1035?aw_0_1st.stationid=3849&aw_0_1st.publisherId=1059&aw_0_1st.serverId=str2b" autoplay="false"></audio>
 	<div id=widthdetect></div>
 	<div id=scroll></div>
     <div id=navbar-completecontainer>
@@ -65,7 +65,7 @@
 		  <h1 id=socialpop-text onClick="window.open('https://www.instagram.com/silhouette.gq/','_blank')">Check us out</h1>
 			<div>
 			  <img id=socialpop-img onClick="window.open('https://www.instagram.com/silhouette.gq/','_blank')" src='./style/images/instagram.svg'>
-			  <img id=socialpop-img onClick="window.open('https://www.twitch.tv/silhouetteradio/','_blank')" src='./style/images/twitch.png'>
+			  <img id=socialpop-img onClick="window.open('https://www.twitch.tv/silhouettegq/','_blank')" src='./style/images/twitch.png'>
 			  <img id=socialpop-img onClick="window.open('https://discord.gg/ZVeEfbq','_blank')" src='./style/images/discord.svg' style="background-color:black">
 			</div>
 		</div>
@@ -370,7 +370,7 @@
 	<a href="" style="border-bottom:1px solid red">eyezah development group</a>
 	<div id=footer-social>
 	  <img src="./style/images/instagram.svg" onClick="window.open('https://www.instagram.com/silhouette.gq/','_blank')"></img>
-	  <img src="./style/images/twitch.png" onClick="window.open('https://www.twitch.tv/silhouetteradio/','_blank')"></img>
+	  <img src="./style/images/twitch.png" onClick="window.open('https://www.twitch.tv/silhouettegq/','_blank')"></img>
 	  <img src="./style/images/discord.svg" onClick="window.open('https://discord.gg/ZVeEfbq','_blank')" style="background-color:black"></img>
 	</div>
 	<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
