--- a/privacy/index.html
+++ b/privacy/index.html
@@ -106,7 +106,7 @@
 	<a href="" style="border-bottom:1px solid red">eyezah development group</a>
 	<div id=footer-social>
 	  <img src="../style/images/instagram.svg" onClick="window.open('https://www.instagram.com/silhouette.gq/','_blank')"></img>
-	  <img src="../style/images/twitch.png" onClick="window.open('https://www.twitch.tv/silhouetteradio/','_blank')"></img>
+	  <img src="../style/images/twitch.png" onClick="window.open('https://www.twitch.tv/silhouettegq/','_blank')"></img>
 	  <img src="../style/images/discord.svg" onClick="window.open('https://discord.gg/ZVeEfbq','_blank')" style="background-color:black"></img>
 	</div>
   </div>
