--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 	  </div>
 	  <div class=fourth-event><div style="background-image: url('./style/images/events/development.png')"></div><h2>Development</h2><p>We're still in the alpha stages. We're still ironing out the bugs and scripting, to provide you with 24/7 entertainment consisting of shows, new tracks, and live music. It's a long process, so bear with us here.</p></div>
 	  <div class=fourth-event><div style="background-image: url('./style/images/events/hosttrial.png')"></div><h2>Host Trial</h2><p>See yourself as an aspiring radio host? Give yourself a shot at Silhouette! We're currently accepting host trials and experimental shows, so this might be your chance to get yourself on air. Have your voice heard. Here, at Silhouette. <a onClick="window.open('http://www.silhouette.gq/jobs','_blank')">Learn More</a></p></div>
-	  <div class=fourth-event><div style="background-image: url('./style/images/deadbeats/Electro Swing.jpg')"></div><h2>Deadbeats W/ the Ghost DJ</h2><p>The Ghost DJ's picks for Deadbeats: Vaporwave. Listen in from 23:00 to 3:00 every night.</p></div>
+	  <div class=fourth-event><div style="background-image: url('./style/images/deadbeats/Vaporwave.jpg')"></div><h2>Deadbeats W/ the Ghost DJ</h2><p>The Ghost DJ's picks for Deadbeats: Vaporwave. Listen in from 23:00 to 3:00 every night.</p></div>
 	</div>
 	<div id=third-calendarcontainer>
 	  <div id=third-cover></div>
