--- a/legal/index.html
+++ b/legal/index.html
@@ -43,6 +43,7 @@
   <body>
   <div id=load><div id="load-record"><div id="load-1"></div><div class="load-rotate" id="load-2"></div><div class="load-rotate" id="load-3"></div><div class="load-rotate" id="load-4"></div></div></div>
   <h1>Terms of Use</h1>
+  <p>These Terms of Use are valid and entirely in use for Silhouette and its affiliated organizations under the <a>eyezah development group</a>. Such organizations include <a>silhouette.gq</a>, <a>eyezah.gq</a>, and <a>dicrack.gq</a>. All terms are outlined here while we undergo maintinence on all other organization's sites.
   <h3>Disclaimer</h3>
   <p>Silhouette is technically a hobbyist project undertaken by the <a>eyezah development group</a>. Although Silhouette attempts to function and perform as professionally as possible, it is not a company or official organization.
   <h3>By using Silhouette you:</h3>
