--- a/privacy/index.html
+++ b/privacy/index.html
@@ -43,6 +43,7 @@
   <body>
   <div id=load><div id="load-record"><div id="load-1"></div><div class="load-rotate" id="load-2"></div><div class="load-rotate" id="load-3"></div><div class="load-rotate" id="load-4"></div></div></div>
   <h1>Privacy Policy</h1>
+  <p>These Terms of Use are valid and entirely in use for Silhouette and its affiliated organizations under the <a>eyezah development group</a>. Such organizations include <a>silhouette.gq</a>, <a>eyezah.gq</a>, and <a>dicrack.gq</a>. All terms are outlined here while we undergo maintinence on all other organization's sites.
   <h2>Silhouette Privacy Statement</h2>
   <p>At Silhouette we value the communities that gather around our brands and take pride in bringing you premium content worthy of your attention. It’s important to us that whatever we are bringing you, whether it’s the latest news, hit music or in-depth conversation, it’s what you want and its meaningful to you. But to give you more of what you want we need to understand you. This means, with your permission, using the information that you give us to make sure our products and services are on point.</p>
   <p>We understand how important your personal information is and that we need to earn your trust, by being honest and transparent about what we do. It’s our job to ensure you really understand what information we collect from you, how we use it and how we keep it safe. We take our commitment to your privacy seriously.</p>
