--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
 		  <a href="#highway"><span class=third-time>12:00</span> - <span class=calendar id=mon-12>Highway</span></a>
 		  <a href="#highway"><span class=third-time>13:00</span> - <span class=calendar id=mon-13>Highway</span></a>
 		  <a href="#highway"><span class=third-time>14:00</span> - <span class=calendar id=mon-14>Highway</span></a>
-		  <a href="#afternoonride"><span class=third-time>15:00</span> - <span class=calendar id=mon-15>Drop 120</span></a>
-		  <a href="#afternoonride"><span class=third-time>16:00</span> - <span class=calendar id=mon-16>Drop 120</span></a>
+		  <a href="#afternoonride"><span class=third-time>15:00</span> - <span class=calendar id=mon-15>Shuffle</span></a>
+		  <a href="#afternoonride"><span class=third-time>16:00</span> - <span class=calendar id=mon-16>Shuffle</span></a>
 		  <a href="#afternoonride"><span class=third-time>17:00</span> - <span class=calendar id=mon-17>Drive</span></a>
 		  <a href="#toppicks"><span class=third-time>18:00</span> - <span class=calendar id=mon-18>Wind Down</span></a>
 		  <a href="#eveningchill"><span class=third-time>19:00</span> - <span class=calendar id=mon-19>Evening Chill</span></a>
@@ -178,8 +178,8 @@
 		  <a href="#highway"><span class=third-time>12:00</span> - <span class=calendar id=tue-12>Highway</span></a>
 		  <a href="#highway"><span class=third-time>13:00</span> - <span class=calendar id=tue-13>Highway</span></a>
 		  <a href="#highway"><span class=third-time>14:00</span> - <span class=calendar id=tue-14>Highway</span></a>
-		  <a href="#afternoonride"><span class=third-time>15:00</span> - <span class=calendar id=tue-15>Drop 120</span></a>
-		  <a href="#afternoonride"><span class=third-time>16:00</span> - <span class=calendar id=tue-16>Drop 120</span></a>
+		  <a href="#afternoonride"><span class=third-time>15:00</span> - <span class=calendar id=tue-15>Shuffle</span></a>
+		  <a href="#afternoonride"><span class=third-time>16:00</span> - <span class=calendar id=tue-16>Shuffle</span></a>
 		  <a href="#afternoonride"><span class=third-time>17:00</span> - <span class=calendar id=tue-17>Drive</span></a>
 		  <a href="#toppicks"><span class=third-time>18:00</span> - <span class=calendar id=tue-18>Wind Down</span></a>
 		  <a href="#eveningchill"><span class=third-time>19:00</span> - <span class=calendar id=tue-19>Evening Chill</span></a>
@@ -206,8 +206,8 @@
 		  <a href="#highway"><span class=third-time>12:00</span> - <span class=calendar id=wed-12>Highway</span></a>
 		  <a href="#highway"><span class=third-time>13:00</span> - <span class=calendar id=wed-13>Highway</span></a>
 		  <a href="#highway"><span class=third-time>14:00</span> - <span class=calendar id=wed-14>Highway</span></a>
-		  <a href="#afternoonride"><span class=third-time>15:00</span> - <span class=calendar id=wed-15>Drop 120</span></a>
-		  <a href="#afternoonride"><span class=third-time>16:00</span> - <span class=calendar id=wed-16>Drop 120</span></a>
+		  <a href="#afternoonride"><span class=third-time>15:00</span> - <span class=calendar id=wed-15>Shuffle</span></a>
+		  <a href="#afternoonride"><span class=third-time>16:00</span> - <span class=calendar id=wed-16>Shuffle</span></a>
 		  <a href="#afternoonride"><span class=third-time>17:00</span> - <span class=calendar id=wed-17>Drive</span></a>
 		  <a href="#toppicks"><span class=third-time>18:00</span> - <span class=calendar id=wed-18>Wind Down</span></a>
 		  <a href="#eveningchill"><span class=third-time>19:00</span> - <span class=calendar id=wed-19>Evening Chill</span></a>
@@ -234,8 +234,8 @@
 		  <a href="#highway"><span class=third-time>12:00</span> - <span class=calendar id=thu-12>Highway</span></a>
 		  <a href="#highway"><span class=third-time>13:00</span> - <span class=calendar id=thu-13>Highway</span></a>
 		  <a href="#highway"><span class=third-time>14:00</span> - <span class=calendar id=thu-14>Highway</span></a>
-		  <a href="#afternoonride"><span class=third-time>15:00</span> - <span class=calendar id=thu-15>Drop 120</span></a>
-		  <a href="#afternoonride"><span class=third-time>16:00</span> - <span class=calendar id=thu-16>Drop 120</span></a>
+		  <a href="#afternoonride"><span class=third-time>15:00</span> - <span class=calendar id=thu-15>Shuffle</span></a>
+		  <a href="#afternoonride"><span class=third-time>16:00</span> - <span class=calendar id=thu-16>Shuffle</span></a>
 		  <a href="#afternoonride"><span class=third-time>17:00</span> - <span class=calendar id=thu-17>Drive</span></a>
 		  <a href="#toppicks"><span class=third-time>18:00</span> - <span class=calendar id=thu-18>Wind Down</span></a>
 		  <a href="#eveningchill"><span class=third-time>19:00</span> - <span class=calendar id=thu-19>Evening Chill</span></a>
@@ -262,15 +262,15 @@
 		  <a href="#highway"><span class=third-time>12:00</span> - <span class=calendar id=fri-12>Highway</span></a>
 		  <a href="#highway"><span class=third-time>13:00</span> - <span class=calendar id=fri-13>Highway</span></a>
 		  <a href="#highway"><span class=third-time>14:00</span> - <span class=calendar id=fri-14>Highway</span></a>
-		  <a href="#afternoonride"><span class=third-time>15:00</span> - <span class=calendar id=fri-15>Drop 120</span></a>
-		  <a href="#afternoonride"><span class=third-time>16:00</span> - <span class=calendar id=fri-16>Drop 120</span></a>
-		  <a href="#afternoonride"><span class=third-time>17:00</span> - <span class=calendar id=fri-17>Drive</span></a>
-		  <a href="#toppicks"><span class=third-time>18:00</span> - <span class=calendar id=fri-18>Wind Down</span></a>
-		  <a href="#eveningchill"><span class=third-time>19:00</span> - <span class=calendar id=fri-19>Evening Chill</span></a>
-		  <a href="#eveningchill"><span class=third-time>20:00</span> - <span class=calendar id=fri-20>Evening Chill</span></a>
-		  <a href="#eveningchill"><span class=third-time>21:00</span> - <span class=calendar id=fri-21>Evening Chill</span></a>
-		  <a href="#eveningchill"><span class=third-time>22:00</span> - <span class=calendar id=fri-22>Evening Chill</span></a>
-		  <a href="#deadbeats"><span class=third-time>23:00</span> - <span class=calendar id=fri-23>Deadbeats</span></a>
+		  <a href="#afternoonride"><span class=third-time>15:00</span> - <span class=calendar id=fri-15>Loose</span></a>
+		  <a href="#afternoonride"><span class=third-time>16:00</span> - <span class=calendar id=fri-16>Loose</span></a>
+		  <a href="#afternoonride"><span class=third-time>17:00</span> - <span class=calendar id=fri-17>Loose</span></a>
+		  <a href="#toppicks"><span class=third-time>18:00</span> - <span class=calendar id=fri-18>Drop 360</span></a>
+		  <a href="#eveningchill"><span class=third-time>19:00</span> - <span class=calendar id=fri-19>Drop 360</span></a>
+		  <a href="#eveningchill"><span class=third-time>20:00</span> - <span class=calendar id=fri-20>Drop 360</span></a>
+		  <a href="#eveningchill"><span class=third-time>21:00</span> - <span class=calendar id=fri-21>Drop 360</span></a>
+		  <a href="#eveningchill"><span class=third-time>22:00</span> - <span class=calendar id=fri-22>Drop 360</span></a>
+		  <a href="#deadbeats"><span class=third-time>23:00</span> - <span class=calendar id=fri-23>Drop 360</span></a>
 		</div>
 	    <div class=third-day>
 		  <h1>Sat</h1>
@@ -282,23 +282,23 @@
 		  <a href="#woke"><span class=third-time>04:00</span> - <span class=calendar id=sat-04>Woke</span></a>
 		  <a href="#woke"><span class=third-time>05:00</span> - <span class=calendar id=sat-05>Woke</span></a>
 		  <a href="#woke"><span class=third-time>06:00</span> - <span class=calendar id=sat-06>Woke</span></a>
-		  <a href="#woke"><span class=third-time>07:00</span> - <span class=calendar id=sat-07>Woke</span></a>
-		  <a href="#woke"><span class=third-time>08:00</span> - <span class=calendar id=sat-08>Woke</span></a>
-		  <a href="#woke"><span class=third-time>09:00</span> - <span class=calendar id=sat-09>Woke</span></a>
-		  <a href="#highway"><span class=third-time>10:00</span> - <span class=calendar id=sat-10>Highway</span></a>
-		  <a href="#highway"><span class=third-time>11:00</span> - <span class=calendar id=sat-11>Highway</span></a>
-		  <a href="#highway"><span class=third-time>12:00</span> - <span class=calendar id=sat-12>Highway</span></a>
-		  <a href="#highway"><span class=third-time>13:00</span> - <span class=calendar id=sat-13>Highway</span></a>
-		  <a href="#highway"><span class=third-time>14:00</span> - <span class=calendar id=sat-14>Highway</span></a>
-		  <a href="#afternoonride"><span class=third-time>15:00</span> - <span class=calendar id=sat-15>Afternoon Ride</span></a>
-		  <a href="#afternoonride"><span class=third-time>16:00</span> - <span class=calendar id=sat-16>Afternoon Ride</span></a>
-		  <a href="#afternoonride"><span class=third-time>17:00</span> - <span class=calendar id=sat-17>Afternoon Ride</span></a>
-		  <a href="#toppicks"><span class=third-time>18:00</span> - <span class=calendar id=sat-18>Top Picks</span></a>
-		  <a href="#eveningchill"><span class=third-time>19:00</span> - <span class=calendar id=sat-19>Evening Chill</span></a>
-		  <a href="#eveningchill"><span class=third-time>20:00</span> - <span class=calendar id=sat-20>Evening Chill</span></a>
-		  <a href="#eveningchill"><span class=third-time>21:00</span> - <span class=calendar id=sat-21>Evening Chill</span></a>
-		  <a href="#eveningchill"><span class=third-time>22:00</span> - <span class=calendar id=sat-22>Evening Chill</span></a>
-		  <a href="#deadbeats"><span class=third-time>23:00</span> - <span class=calendar id=sat-23>Deadbeats</span></a>
+		  <a href="#woke"><span class=third-time>07:00</span> - <span class=calendar id=sat-07>Span</span></a>
+		  <a href="#woke"><span class=third-time>08:00</span> - <span class=calendar id=sat-08>Span</span></a>
+		  <a href="#woke"><span class=third-time>09:00</span> - <span class=calendar id=sat-09>Span</span></a>
+		  <a href="#highway"><span class=third-time>10:00</span> - <span class=calendar id=sat-10>Span</span></a>
+		  <a href="#highway"><span class=third-time>11:00</span> - <span class=calendar id=sat-11>Span</span></a>
+		  <a href="#highway"><span class=third-time>12:00</span> - <span class=calendar id=sat-12>Top Picks</span></a>
+		  <a href="#highway"><span class=third-time>13:00</span> - <span class=calendar id=sat-13>Top Picks</span></a>
+		  <a href="#highway"><span class=third-time>14:00</span> - <span class=calendar id=sat-14>Top Picks</span></a>
+		  <a href="#afternoonride"><span class=third-time>15:00</span> - <span class=calendar id=sat-15>Top Picks</span></a>
+		  <a href="#afternoonride"><span class=third-time>16:00</span> - <span class=calendar id=sat-16>Loose</span></a>
+		  <a href="#afternoonride"><span class=third-time>17:00</span> - <span class=calendar id=sat-17>Loose</span></a>
+		  <a href="#toppicks"><span class=third-time>18:00</span> - <span class=calendar id=sat-18>Drop 360</span></a>
+		  <a href="#eveningchill"><span class=third-time>19:00</span> - <span class=calendar id=sat-19>Drop 360</span></a>
+		  <a href="#eveningchill"><span class=third-time>20:00</span> - <span class=calendar id=sat-20>Drop 360</span></a>
+		  <a href="#eveningchill"><span class=third-time>21:00</span> - <span class=calendar id=sat-21>Drop 360</span></a>
+		  <a href="#eveningchill"><span class=third-time>22:00</span> - <span class=calendar id=sat-22>Drop 360</span></a>
+		  <a href="#deadbeats"><span class=third-time>23:00</span> - <span class=calendar id=sat-23>Drop 360</span></a>
 		</div>
 	    <div class=third-day>
 		  <h1>Sun</h1>
@@ -312,16 +312,16 @@
 		  <a href="#woke"><span class=third-time>06:00</span> - <span class=calendar id=sun-06>Woke</span></a>
 		  <a href="#woke"><span class=third-time>07:00</span> - <span class=calendar id=sun-07>Woke</span></a>
 		  <a href="#woke"><span class=third-time>08:00</span> - <span class=calendar id=sun-08>Woke</span></a>
-		  <a href="#woke"><span class=third-time>09:00</span> - <span class=calendar id=sun-09>Woke</span></a>
-		  <a href="#highway"><span class=third-time>10:00</span> - <span class=calendar id=sun-10>Highway</span></a>
-		  <a href="#highway"><span class=third-time>11:00</span> - <span class=calendar id=sun-11>Highway</span></a>
-		  <a href="#highway"><span class=third-time>12:00</span> - <span class=calendar id=sun-12>Highway</span></a>
-		  <a href="#highway"><span class=third-time>13:00</span> - <span class=calendar id=sun-13>Highway</span></a>
-		  <a href="#highway"><span class=third-time>14:00</span> - <span class=calendar id=sun-14>Highway</span></a>
-		  <a href="#afternoonride"><span class=third-time>15:00</span> - <span class=calendar id=sun-15>Afternoon Ride</span></a>
-		  <a href="#afternoonride"><span class=third-time>16:00</span> - <span class=calendar id=sun-16>Afternoon Ride</span></a>
-		  <a href="#afternoonride"><span class=third-time>17:00</span> - <span class=calendar id=sun-17>Afternoon Ride</span></a>
-		  <a href="#toppicks"><span class=third-time>18:00</span> - <span class=calendar id=sun-18>Top Picks</span></a>
+		  <a href="#woke"><span class=third-time>09:00</span> - <span class=calendar id=sun-09>Span</span></a>
+		  <a href="#highway"><span class=third-time>10:00</span> - <span class=calendar id=sun-10>Span</span></a>
+		  <a href="#highway"><span class=third-time>11:00</span> - <span class=calendar id=sun-11>Span</span></a>
+		  <a href="#highway"><span class=third-time>12:00</span> - <span class=calendar id=sun-12>Span</span></a>
+		  <a href="#highway"><span class=third-time>13:00</span> - <span class=calendar id=sun-13>Airtime</span></a>
+		  <a href="#highway"><span class=third-time>14:00</span> - <span class=calendar id=sun-14>Airtime</span></a>
+		  <a href="#afternoonride"><span class=third-time>15:00</span> - <span class=calendar id=sun-15>Airtime</span></a>
+		  <a href="#afternoonride"><span class=third-time>16:00</span> - <span class=calendar id=sun-16>Span</span></a>
+		  <a href="#afternoonride"><span class=third-time>17:00</span> - <span class=calendar id=sun-17>Span</span></a>
+		  <a href="#toppicks"><span class=third-time>18:00</span> - <span class=calendar id=sun-18>Evening Chill</span></a>
 		  <a href="#eveningchill"><span class=third-time>19:00</span> - <span class=calendar id=sun-19>Evening Chill</span></a>
 		  <a href="#eveningchill"><span class=third-time>20:00</span> - <span class=calendar id=sun-20>Evening Chill</span></a>
 		  <a href="#eveningchill"><span class=third-time>21:00</span> - <span class=calendar id=sun-21>Evening Chill</span></a>
